<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/parking" />

    <EditText
        android:id="@+id/editText"
        style="@android:style/Widget.EditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="318dp"
        android:autoSizeMaxTextSize="16dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/user"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="377dp"
        android:autoSizeMaxTextSize="16dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        tools:targetApi="o" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        app:cardBackgroundColor="#E42168"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"

                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:text="@string/register_here" />

    <Button
        android:id="@+id/bigbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:text="@string/click"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />


</RelativeLayout>


